# house_puzzle

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rust  EXPORT_BUNDLE.md  README.md  UNITY_INTEGRATION.md  ai_parser.py  build.bat  build.sh  dev.sh  docker-compose.rust.yml  docker-compose.yml  house_puzzle.spec  index.html  pdf_parser.py  plan-sand-fixes.md  puzzle_engine.py  requirements.txt  runs.json  server.py  tif_parser.py  todo.md  todo_bugs.md  tracer.py  unity_export.py
.github/workflows/: build-rust.yml  build-tauri.yml  build-windows.yml  build.yml  cargo-test.yml  e2e-tests.yml  release-ai-validate.yml
crates/hp-core/: Cargo.toml
crates/hp-core/examples/: diff_all_houses.rs  dump_brick_blocks.rs  dump_ocg.rs  export_house.rs  gen_all_layers.rs  render_per_brick.rs  show_one_brick.rs
crates/hp-core/src/: ai_parser.rs  bezier.rs  bezier_merge.rs  export.rs  lib.rs  mupdf_ffi.rs  ocg_inject.rs  psd.rs  puzzle.rs  raster_extract.rs  render.rs  stability.rs  types.rs
crates/hp-core/tests/: canary_composite.rs
crates/hp-server/: Cargo.toml
crates/hp-server/src/: main.rs  routes.rs  session.rs  version.rs
crates/hp-tauri/: .gitignore  Cargo.toml  tauri.conf.json
crates/hp-tauri/capabilities/: default.json
crates/hp-tauri/icons/: icon.icns
crates/hp-tauri/src/: commands.rs  main.rs  session.rs  settings.rs
crates/hp-tauri/tests/e2e/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
crates/hp-tauri/tests/e2e/specs/: app.test.ts
crates/hp-testbed/: Cargo.toml
crates/hp-testbed/src/: lib.rs
crates/hp-testbed/static/: index.html
crates/hp-testbed/testbed/: _NY1.json  _NY10.json  _NY2.json  _NY3.json  _NY4.json  _NY5.json  _NY6.json  _NY7.json  _NY8.json  _NY9n.json  golden.json  snapshot.json
crates/hp-testbed/tests/: determinism.rs  regression_ny8.rs
elm/: elm.json
elm/src/: Main.elm
in/: _NY5.ai  _NY8.ai
presets/: Coarse.json  Default.json  Fine.json
runs/: index.html
runs/24609283745/: index.html
runs/24609577278/: index.html
runs/24609819107/: index.html
runs/24609861886/: index.html
runs/24609926364/: index.html
runs/24610070308/: index.html
runs/24611500215/: index.html
runs/24613182406/: index.html
runs/24613952008/: index.html
runs/24614217733/: index.html
runs/24614914693/: index.html
runs/24615035876/: index.html
runs/24615819581/: index.html
runs/24615927424/: index.html
runs/24627537444/: index.html
runs/24627721793/: index.html
runs/24627967325/: index.html
runs/24630626573/: index.html
runs/24633553535/: index.html
runs/24633674661/: index.html
runs/24633749609/: index.html
runs/24634041139/: index.html
runs/24681610654/: index.html
runs/24682323447/: index.html
runs/24683747598/: index.html
runs/24683997508/: index.html
runs/24741826957/: index.html
runs/24941353112/: index.html
runs/24996295267/: index.html
runs/24999750412/: index.html
runs/25000319124/: index.html
runs/25125403848/: index.html
runs/25125846454/: index.html
runs/25186038145/: index.html
runs/25186866850/: index.html
runs/25187966586/: index.html
runs/25189257405/: index.html
runs/25189616415/: index.html
runs/25190112748/: index.html
runs/25190742519/: index.html
runs/25191199443/: index.html
runs/25191561567/: index.html
runs/25191841511/: index.html
runs/25193880484/: index.html
runs/25194560994/: index.html
runs/25194718351/: index.html
runs/25196274608/: index.html
runs/25210928043/: index.html
runs/25211417673/: index.html
runs/25211744717/: index.html
runs/25213255580/: index.html
runs/25213432162/: index.html
runs/25213564405/: index.html
runs/25213766938/: index.html
runs/25213775940/: index.html
runs/25214003862/: index.html
runs/25214009799/: index.html
runs/25214733787/: index.html
runs/25218799187/: index.html
runs/25222779909/: index.html
runs/25223250498/: index.html
runs/25224231625/: index.html
runs/25224712039/: index.html
runs/25224907148/: index.html
runs/25225635809/: index.html
runs/25226321551/: index.html
runs/25226755823/: index.html
runs/25227001675/: index.html
runs/25228026785/: index.html
runs/25231546876/: index.html
runs/25231576578/: index.html
runs/25257502522/: index.html
runs/25257565224/: index.html
runs/25258285759/: index.html
runs/25283628282/: index.html
runs/25283883847/: index.html
runs/25287822595/: index.html
runs/25288090129/: index.html
runs/25288596393/: index.html
runs/25288885056/: index.html
runs/25288897313/: index.html
runs/25289948727/: index.html
runs/25323696690/: index.html
runs/25370480494/: index.html
runs/25373498903/: index.html
runs/25374689115/: index.html
runs/25375232441/: index.html
runs/25375580528/: index.html
runs/25376122455/: index.html
runs/25384043756/: index.html
runs/25499029090/: index.html
runs/25499782416/: index.html
runs/25501393418/: index.html
runs/25501664807/: index.html
runs/25503070504/: index.html
runs/25503365423/: index.html
runs/25503500566/: index.html
runs/25503817632/: index.html
runs/25999754770/: index.html
runs/26000369077/: index.html
runs/26000804284/: index.html
runs/26004534108/: index.html
runs/26005117593/: index.html
runs/26005662018/: index.html
runs/26335638107/: index.html
runs/26453329947/: index.html
runs/26765691570/: index.html
runs/26778654595/: index.html
runs/27021559369/: index.html
runs/27022125600/: index.html
runs/27074941791/: index.html
runs/27092945478/: index.html
runs/27093704694/: index.html
runs/27094735901/: index.html
static/: editor.js  elm.js
templates/: debug_trace.html  elm.html  index.html  manage.html
tests/: canary.py  capture_baselines.py  helpers.py  test_e2e.py
tests/accessibility/: Cargo.toml  test_linux.sh  test_macos.sh  test_windows.ps1
tests/accessibility/src/: main.rs
tests/accessibility/src/ui_test/: file_cmd.rs  linux.rs  macos.rs  mod.rs  windows.rs
(+78 files in other folders)
