[package]
name = "hp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
mupdf = "0.6"
mupdf-sys = "0.6"
zstd = "0.13"
regex = "1"
image = "0.24"
rayon = "1"
geo = "0.29"
rand = "0.9"
rand_chacha = "0.9"
