[package]
name = "hp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hp-core = { path = "../hp-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
