[package]
name = "hp-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Optional webdriver feature ───────────────────────────────────────────────
# Embeds a W3C WebDriver server (port 4445) for E2E tests.
# Enable with `--features webdriver` when building the E2E test binary.
# On Linux/macOS: `cargo build --features webdriver` (debug, no CRT issues)
# On Windows:     `cargo build --release --features webdriver` (avoids
#                 _ITERATOR_DEBUG_LEVEL mismatch between debug/release CRT)
[features]
webdriver = ["dep:tauri-plugin-webdriver"]

[dependencies]
tauri-plugin-webdriver = { version = "0.2", optional = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
hp-core = { path = "../hp-core" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
image = "0.24"
tokio = { version = "1", features = ["full"] }
