[package]
name = "hp-testbed"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hp-core = { path = "../hp-core" }
image = { version = "0.24", default-features = false, features = ["png"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1"

[[bin]]
name = "hp-snapshot"
path = "src/bin/snapshot.rs"

[[bin]]
name = "hp-testbed"
path = "src/bin/server.rs"

[[bin]]
name = "hp-golden"
path = "src/bin/golden.rs"
